# JobSearch

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Claude.MD  GEMINI.md  GETTING_STARTED.md  LICENSE  QA_REPORT.md  README.md  USER_GUIDE.md  anonymize_text.py  app.py  ats_db.py  heal_ats_yaml.py  job_search_history_v6.json  job_search_main.py  job_search_v6.py  job_search_v6_active_config.json  job_search_v6_tiered_softdrop_final_patched.py  launch.bat  launch.command  launch.sh  launch.vbs  pyproject.toml  re_score_js.py  repair_all_companies.py  repair_all_workday.py  repair_deduplicate_registries.py  requirements.txt  rescore_pipeline.py  run_job_search_v6.py  run_job_search_v6_cli.py  run_job_search_v6_cli_fixed.py  run_job_search_v6_cli_fixed2.py  sitecustomize.py
.claude/: settings.local.json
config/: job_search_companies.yaml  job_search_companies.yaml.bak2  job_search_companies_aggregators.yaml  job_search_companies_ai_infrastructure_enterprise_ai.yaml  job_search_companies_colorado_refined.yaml  job_search_companies_colorado_top_50.yaml  job_search_companies_consulting_finserv.yaml  job_search_companies_contract.yaml  job_search_companies_contract_test.yaml  job_search_companies_data_infra_analytics_devtools.yaml  job_search_companies_healthtech_insurtech.yaml  job_search_companies_jobspy.yaml  job_search_companies_remote_first_50.yaml  job_search_companies_remote_first_refined.yaml  job_search_companies_test.yaml  job_search_companies_top_100_tech.yaml  job_search_preferences.example.yaml  job_search_preferences.yaml.bak3  job_search_preferences.yaml.bak4  job_search_preferences_tiered_softdrop_final_patched.yaml  manual_jobs_template.csv
core/: job_search_main.py
db/: connection.py  models.py  schema.py
deep_search/: __init__.py  install_deep_search.bat  install_deep_search.sh  playwright_adapter.py
docs/: AI_SETUP_PROMPTS.md  TEST_PLAN.md  Worth borrowing.txt  aggregator_lane_spec.md  devplan.txt  prompt.txt
installer/: build_installer.bat  jobsearch_setup.iss
results/: job_search_history_v6.json  job_search_v6_active_config.json
services/: analytics_service.py  importer.py  opportunity_service.py  pipeline_service.py
tests/: test_action_center.py  test_action_center_v2.py  test_ats_upgrade_flow.py  test_smoke.py  (+21 more)
(+134 files in other folders)
