[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "jobsearch"
version = "2.1.1"
description = "Automated job search pipeline and application tracker"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "requests==2.31.0",
    "urllib3>=1.26.15,<3.0.0",
    "PyYAML==6.0.1",
    "beautifulsoup4==4.12.3",
    "pandas==2.2.2",
    "openpyxl==3.1.2",
    "streamlit==1.37.1",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "click==8.2.1",
    "numpy==1.26.3",
    "pypdf==5.4.0",
    "free-proxy>=1.1.1",
    "jobspy-enhanced-scraper==1.3.7",
    "google-genai",
    "openai",
    "APScheduler>=3.10",
]

[project.scripts]
jobsearch = "jobsearch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
